src/lexical_analysis/tests/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_special_characters_case3.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: "crate::lexical_analysis::get_tokens(code.to_string())"
---
[
  "GREATER_THAN",
  "LESSER_THAN",
  "MULTIPLY",
  "EOF"
]
