src/lexical_analysis/tests/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_special_characters_case5.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: returned_tokens
---
[
  "ASSIGN",
  "PLUS",
  "OPENING_ROUND_BRACKET",
  "CLOSING_ROUND_BRACKET",
  "EOF"
]
