src/lexical_analysis/tests/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_special_multi_characters_case1.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: "crate::lexical_analysis::get_tokens(code)"
---
[
  {
    "INTEGER": {
      "literal": "2"
    }
  },
  "EQUALS",
  {
    "INTEGER": {
      "literal": "4"
    }
  },
  "EOF"
]
